# FamiliarFrame

./: job_roles.csv  keyword_clusters.csv  movie_credits.csv  movie_genres.csv  movie_keywords.csv  movies.csv  persons.csv
movie-database-project-backend/: Casts.py  app.py  async_fetch_data.py  db.py  export_to_csv.py  get_data.py  helper_functions.py  keywords_router.py  main.py  movies_data_router.py  pyproject.toml  schema.py
movie-database-project-frontend/: README.md  ncalls  next.config.ts  package-lock.json  package.json
movie-database-project-frontend/app/: globals.css  layout.tsx  page.tsx
movie-database-project-frontend/app/recommended-movie/: page.tsx
movie-database-project-frontend/components/: Familiar-Frame-Logo.tsx  HamburgerButton.tsx  Hero-Section.tsx  MovieDetails.tsx  NavBar.tsx  Setup.tsx  SetupBackground.tsx
movie-database-project-frontend/components/icons/: Hamburger.tsx  PlusIcon.tsx  index.ts
movie-database-project-frontend/src/api/: Clusters.ts  ClustersIdsLabelsMovies.ts  GetMovieDataFromIds.ts  MovieIds.ts
